# SmartCopy

./: .gitignore  README.md  analysis_options.yaml  pubspec.yaml
.github/workflows/: release.yml
SmartCopy-Rust/: index.html  package-lock.json  package.json
SmartCopy-Rust/src/: main.ts  styles.css
SmartCopy-Rust/src-tauri/: Cargo.toml  tauri.conf.json
SmartCopy-Rust/src-tauri/src/: lib.rs  main.rs
SmartCopy-Rust/src-tauri/src/models/: app_settings.rs  copy_task.rs  folder_profile.rs  mod.rs
SmartCopy-Rust/src-tauri/src/services/: clipboard_service.rs  copy_engine.rs  hotkey_service.rs  logger_service.rs  mod.rs  registry_service.rs  storage_service.rs  tray_service.rs
SmartCopy-Rust/src-tauri/src/utils/: mod.rs
lib/: main.dart
lib/core/models/: app_settings.dart  copy_task.dart  folder_profile.dart
lib/core/services/: clipboard_service.dart  copy_engine.dart  ipc_service.dart  logger_service.dart  registry_service.dart  storage_service.dart  tray_service.dart
lib/core/utils/: app_dir.dart  glob_matcher.dart
lib/providers/: app_provider.dart
lib/ui/screens/: global_rules_screen.dart  home_screen.dart  profiles_screen.dart  settings_screen.dart
lib/ui/theme/: app_theme.dart
lib/ui/widgets/: common_widgets.dart  duplicate_file_dialog.dart  side_nav.dart
windows/: CMakeLists.txt
windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
windows/runner/: Runner.rc  main.cpp  runner.exe.manifest
