[package]
name = "smartcopy"
version = "1.0.0"
description = "SmartCopy - 智能过滤式文件复制工具（Windows）"
authors = ["xiaobaiweinuli"]
edition = "2021"

[lib]
name = "smartcopy_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"

# 数据序列化
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# .gitignore 风格匹配
ignore = "0.4"

# Windows API
winreg = "0.55"
clipboard-win = "4"

# 系统集成
global-hotkey = "0.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# 异步运行时
tokio = { version = "1", features = ["full"] }

# 文件操作
walkdir = "2"
rayon = "1"

# 日期时间
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# 路径处理
dirs = "5"

# 日志轮转
log = "0.4"

# 错误处理
thiserror = "2"
anyhow = "1"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_Shell",
    "Win32_System_Com",
    "Win32_System_DataExchange",
    "Win32_System_Ole",
] }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
opt-level = "s"
